Shadow pass output image is mangled. #37703

Closed
opened 2013-12-05 01:10:39 +01:00 by Sebastian Parborg · 8 comments

System Information
Operating system and graphics card:
Linux DarkRain 3.11.2-gentoo #1 SMP PREEMPT Tue Oct 1 18:18:35 CEST 2013 x86_64 Intel(R) Core(TM)2 Quad CPU Q9450 @ 2.66GHz GenuineIntel GNU/Linux

GPU: ATI HD4870

Blender Version
Broken: Blender from git: 2013-12-04, Hash: df2f604, master branch
Worked: Blender 2.69 (I'm guessing here...)

Short description of error
The shadow pass image is mangled when viewing it in the image viewer in blender. And it stays that way when saved to a file.
However it seems to still work fine if I use the shadow pass output in the compositor.
But I really need to be able to save the shadow pass as a file for use in a image editor.

The image has "stripes" of "alpha channels" in the image and some parts of the image seem have been moved. IE as if the image were cut into stripes and then the stripes where then put together incorrectly.

When I tested about two weeks ago this worked fine.

Exact steps for others to reproduce the error
Open up blenders default cube scene, go to render layers and check the shadow pass, render the scene and then look at the output image from the shadow pass.

**System Information** Operating system and graphics card: Linux DarkRain 3.11.2-gentoo #1 SMP PREEMPT Tue Oct 1 18:18:35 CEST 2013 x86_64 Intel(R) Core(TM)2 Quad CPU Q9450 @ 2.66GHz GenuineIntel GNU/Linux GPU: ATI HD4870 **Blender Version** Broken: Blender from git: 2013-12-04, Hash: df2f604, master branch Worked: Blender 2.69 (I'm guessing here...) **Short description of error** The shadow pass image is mangled when viewing it in the image viewer in blender. And it stays that way when saved to a file. However it seems to still work fine if I use the shadow pass output in the compositor. But I really need to be able to save the shadow pass as a file for use in a image editor. The image has "stripes" of "alpha channels" in the image and some parts of the image seem have been moved. IE as if the image were cut into stripes and then the stripes where then put together incorrectly. When I tested about two weeks ago this worked fine. **Exact steps for others to reproduce the error** Open up blenders default cube scene, go to render layers and check the shadow pass, render the scene and then look at the output image from the shadow pass.
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @ZedDB

Added subscriber: @ZedDB
Author
Member

Just to be clear: The blender version that I listed as broken is not the commit that broke it. It's the version of blender that I currently use.

Just to be clear: The blender version that I listed as broken is not the commit that broke it. It's the version of blender that I currently use.
Sergey Sharybin self-assigned this 2013-12-05 12:24:32 +01:00

Afraid i broke this with recent fix to another bug.

Afraid i broke this with recent fix to another bug.

This issue was referenced by blender/blender-addons-contrib@4838a60b0c

This issue was referenced by blender/blender-addons-contrib@4838a60b0c389292d701ec394b1204a168be7e21

This issue was referenced by 4838a60b0c

This issue was referenced by 4838a60b0c389292d701ec394b1204a168be7e21

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 4838a60b0c.

Closed by commit 4838a60b0c.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#37703
No description provided.