Fix T37703: Shadow pass output image is mangled.

Was a mistake in own optimization commit.